.kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - joesak.com
    - www.joesak.com
    secretName: letsencrypt-certs
  rules:
  - host: joesak.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: www.joesak.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
